--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -15,21 +15,19 @@ config CPU_FREQ
 
 if CPU_FREQ
 
+config CPU_FREQ_MIN_FREQ
+	int "Minimum CPU Frequency"
+	default 100000
+
+config CPU_FREQ_MAX_FREQ
+	int "Maximum CPU Frequency"
+	default 1400000
+	help
+	  WARNING: Since not all devices are made equal, do not set this higher
+	  than the stock frequency.
+
 config CPU_FREQ_TABLE
 	tristate
-
-config CPU_FREQ_DEBUG
-	bool "Enable CPUfreq debugging"
-	help
-	  Say Y here to enable CPUfreq subsystem (including drivers)
-	  debugging. You will need to activate it via the kernel
-	  command line by passing
-	     cpufreq.debug=<value>
-
-	  To get <value>, add 
-	       1 to activate CPUfreq core debugging,
-	       2 to activate CPUfreq drivers debugging, and
-	       4 to activate CPUfreq governor debugging
 
 config CPU_FREQ_STAT
 	tristate "CPU frequency translation statistics"
@@ -99,6 +97,20 @@ config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
 
+config CPU_FREQ_DEFAULT_GOV_ONDEMANDX
+  bool "ondemandx"
+  select CPU_FREQ_GOV_ONDEMANDX
+  select CPU_FREQ_GOV_PERFORMANCE
+  help
+    Use the CPUFreq governor 'ondemand' as default. This allows
+    you to get a full dynamic frequency capable system by simply
+    loading your cpufreq low-level hardware driver.
+    Be aware that not all cpufreq drivers support the ondemand
+    governor. If unsure have a look at the help section of the
+    driver. Fallback governor will be the performance governor.
+    OndemandX has built in sleep profile, but not working Sysfs
+    interface
+
 config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	bool "conservative"
 	select CPU_FREQ_GOV_CONSERVATIVE
@@ -110,6 +122,42 @@ config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	  Be aware that not all cpufreq drivers support the conservative
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
+
+config CPU_FREQ_DEFAULT_GOV_SMARTASS2
+	bool "smartass"
+	select CPU_FREQ_GOV_SMARTASS2
+	select CPU_FREQ_GOV_PERFORMANCE
+	help
+	 Use the CPUFreq governor 'smartassV2' as default.
+
+config CPU_FREQ_DEFAULT_GOV_LAGFREE
+  bool "lagfree"
+  select CPU_FREQ_GOV_LAGFREE
+  help
+    Use the CPUFreq governor 'lagfree' as default.
+
+config CPU_FREQ_MIN_TICKS
+    int "Ticks between governor polling interval."
+    default 10
+    help
+        Minimum number of ticks between polling interval for governors.
+
+config CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER
+    int "Sampling rate multiplier for governors."
+    default 250
+    help
+        Sampling latency rate multiplied by the cpu switch latency.
+        Affects governor polling.
+
+config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
+	bool "interactive"
+	select CPU_FREQ_GOV_INTERACTIVE
+	help
+	  Use the CPUFreq governor 'interactive' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'interactive' governor for latency-sensitive workloads.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -162,6 +210,86 @@ config CPU_FREQ_GOV_ONDEMAND
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called cpufreq_ondemand.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ONDEMANDX
+  tristate "'ondemandx' cpufreq policy governor"
+  select CPU_FREQ_TABLE
+  help
+    'ondemand' - This driver adds a dynamic cpufreq policy governor.
+    The governor does a periodic polling and 
+    changes frequency based on the CPU utilization.
+    The support for this governor depends on CPU capability to
+    do fast frequency switching (i.e, very low latency frequency
+    transitions). 
+	
+    To compile this driver as a module, choose M here: the
+    module will be called cpufreq_ondemand.
+
+    For details, take a look at linux/Documentation/cpu-freq.
+ 	
+    If in doubt, say N.
+ 	
+config CPU_FREQ_GOV_ONDEMANDX_INPUT
+  bool "Ramp up CPU frequency on input events"
+  default y
+  depends on CPU_FREQ_GOV_ONDEMANDX
+  help
+    Enable installation of an input event handler which will ramp up the
+    CPU to max frequency when an input event is received.
+
+config CPU_FREQ_GOV_ONDEMAND_FLEXRATE
+	bool "flexrate interface for 'ondemand' cpufreq policy governor"
+	depends on CPU_FREQ_GOV_ONDEMAND
+	help
+	  Flexrate for 'ondemand' governor provides an interface to request
+	  faster polling temporarily. This is to let it react quickly to
+	  load changes when there is high probablity of load increase
+	  in short time. For example, when a user event occurs, we have
+	  use this interface. It does not increase the frequency
+	  unconditionally; however, it allows ondemand to react fast
+	  by temporarily decreasing sampling rate. Flexrate provides both
+	  sysfs interface and in-kernel interface.
+
+config CPU_FREQ_GOV_ONDEMAND_FLEXRATE_MAX_DURATION
+	int "flexrate's maximum duration of sampling rate override"
+	range 5 500
+	depends on CPU_FREQ_GOV_ONDEMAND_FLEXRATE
+	default "100"
+	help
+	  The maximum number of ondemand sampling whose rate is
+	  overriden by Flexrate for ondemand.
+
+config CPU_FREQ_GOV_SMARTASS2
+        tristate "'smartassV2' cpufreq governor"
+        depends on CPU_FREQ
+        help
+            'smartassV2' - a "smart" governor
+            If in doubt, say N.
+
+config CPU_FREQ_GOV_LAGFREE
+    tristate "'lagfree' cpufreq governor"
+    depends on CPU_FREQ
+    help
+        lagfree - a optimizer CPU governor!
+
+        If in doubt, say N.
+
+config CPU_FREQ_GOV_INTERACTIVE
+	tristate "'interactive' cpufreq policy governor"
+	help
+	  'interactive' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  interactive workloads.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_interactive.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
 
