--- a/arch/arm/configs/say_defconfig
+++ b/arch/arm/configs/say_defconfig
@@ -1688,7 +1688,7 @@ CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_USB_ANDROID_RNDIS=y
 CONFIG_USB_ANDROID_RNDIS_WCEIS=y
 CONFIG_USB_ANDROID_RNDIS_DWORD_ALIGNED=y
-CONFIG_USB_ANDROID_ACCESSORY=y
+# CONFIG_USB_ANDROID_ACCESSORY is not set
 # CONFIG_USB_ANDROID_RNDIS_WCEIS is not set
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
 CONFIG_USB_ANDROID_SAMSUNG_ESCAPE=y
